--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{% block title %}漳州装修网 | 漳州装修公司 －免费上门量房 免费设计报价 {% endblock title %}</title>
+    <title>{% block title %}漳州装修网_漳州装修公司 －免费上门量房 免费设计报价 {% endblock title %}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="baidu-site-verification" content="mvEV22iEti" />
-    <meta content={% block keywords %}漳州装修网，漳州装修公司{% endblock keywords %} name=keywords>
+    <meta name="baidu-site-verification" content="MnrErkw4ui" />
+    <meta content={% block keywords %}漳州装修网,漳州装修公司{% endblock keywords %} name=keywords>
     <meta content={% block description %}漳州装修网(漳州装修公司)为您提供2015装修效果图大全、装修流程、装修预算、装修吉日查询及其他装饰装修常见问题解答。{% endblock description %} name=description>
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
