--- a/templates/gallery/gallery_base.html
+++ b/templates/gallery/gallery_base.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}2015装修效果图大全 -漳州装修网{% endblock title %}
+{% block keywords %}2015装修效果图大全,漳州装修网{% endblock keywords %}
+{% block description %}2015装修效果图大全,漳州装修网{% endblock description %}
 {% block header %}
     <div class="gallery-header">
         <div class="container">
