--- a/templates/kalendar/kalendar_list.html
+++ b/templates/kalendar/kalendar_list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
-{% block title %}2015年装修吉日｜装修吉日查询2015 -漳州装修网{% endblock title %}
+{% block title %}2015年装修吉日_装修吉日查询2015 -漳州装修网{% endblock title %}
+{% block keywords %}2015年装修吉日,装修吉日查询2015,漳州装修网{% endblock keywords %}
+{% block description %}2015年装修吉日,装修吉日查询2015,漳州装修网{% endblock description %}
 {% block content %}
     <input type="hidden" id="hidden-nav" value="nav-kalendar" />
     <div class="container">
