--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,7 +3,7 @@
 <div class="header-top">
     <div class="container">
         <div class="header-top-left">
-            <a href="{% show_full_url 'home' %}">漳州装修网</a>|<a href="">漳州装修公司</a>
+            <a href="{% show_full_url 'home' %}">漳州装修网</a>|<a href="{% show_full_url 'home' %}">漳州装修公司</a>
         </div>
         <div class="header-top-right">
             咨询热线：18205964966
