--- a/templates/article/article_list.html
+++ b/templates/article/article_list.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% load static common_tags %}
-{% block title %}
-    {{ type.keyword|default:"装修攻略" }} -装修知识 -漳州装修网
-{% endblock title %}
+{% block title %}{{ type.keyword|default:"装修攻略" }} -装修知识 -漳州装修网{% endblock title %}
+{% block keywords %}{{ type.keyword|default:"装修攻略" }},装修知识,漳州装修网{% endblock keywords %}
+{% block description %}{{ type.keyword|default:"装修攻略" }},装修知识,漳州装修网{% endblock description %}
 {% block content %}
     <input type="hidden" value="nav-zhishi" id="hidden-nav">
     <div class="container">
