--- a/templates/gallery/photo_list.html
+++ b/templates/gallery/photo_list.html
@@ -2,6 +2,8 @@
 {% load gallery_tags common_tags %}
 
 {% block title %}2015装修效果图大全 -漳州装修网{% endblock title %}
+{% block keywords %}2015装修效果图大全,漳州装修网{% endblock keywords %}
+{% block description %}2015装修效果图大全,漳州装修网{% endblock description %}
 
 {% block content %}
     <input type="hidden" id="hidden-nav" value="nav-images" />
