--- a/templates/home.html
+++ b/templates/home.html
@@ -38,11 +38,11 @@
                     10秒钟登记，专业设计师免费为您服务
                 </div>
                 <div class="form-line">
-                    <label class="label">您的称呼</label>
+                    <label class="label" data-label="您的称呼">您的称呼</label>
                     <input class="text" type="text" id="name">
                 </div>
                 <div class="form-line">
-                    <label class="label">您的电话</label>
+                    <label class="label" data-label="您的电话">您的电话</label>
                     <input class="text" type="text" id="phone">
                 </div>
                 <div class="form-line">
@@ -70,15 +70,34 @@
                 </div>
                 <script type="text/javascript">
                     $(function(){
+                        init();
                         send();
                     })
+                    function init(){
+                        $("#name,#phone").bind("focus", function(){
+                            var _this = $(this);
+                            var _obj = _this.siblings().eq(0);
+                            if (_obj.text() == _obj.data('label')){
+                                _obj.text("")
+                            }
+                        })
+                        $("#name,#phone").bind("focusout", function(){
+                            var _this = $(this);
+                            var _obj = _this.siblings().eq(0);
+                            if(_this.val() == ""){
+                                _obj.text(_obj.data('label'));
+                            }
+                        })
+                    }
+
                     function send(){
                         $("#send").bind("click", function () {
                             var type = $("#slider-left-tab li").index($("#slider-left-tab li.on"));
                             var name = $("#name").val();
-                            if (name == ""){
-                                alert("请输入您的姓名");
-                                return false;
+                            var re = /^[\u4e00-\u9fa5]+$/gi;
+                            if (!re.test(name)){
+                                alert('请输入正确的姓名');
+                                return false
                             }
                             var phone = $("#phone").val();
                             var reg = /^1[3|4|5|8]\d{9}$/;
